umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_cyclohexyl-chloride.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOpO
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{Cl/3v1}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOpO
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{Cl/3v1}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
