umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_cyclopropyl-chloride.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Ct
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{Cl/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Ct
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{Cl/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
