umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_diethylether.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
