umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_dimethyl-sulfoxide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "S#n#v4" "2" "C#h3#v" "3" "O#n2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["1" "3" "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "S#n#v4" "2" "C#h3#v" "3" "O#n2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["1" "3" "2"]] :charge 0 :spin "#u0 #s1"}}}
